# webserv

./: .gitignore  CMakeLists.txt  Makefile  main.cpp  teo  test.cpp  webserv.cpp
Client/: Client.cpp
Parser/: Parser.cpp  test_parser.cpp
Request/: Request.cpp
Server/: Makefile  Server.cpp  webserv.cpp
config/: webserv.conf
includes/: Parser.hpp  Request.hpp  Server.hpp  defines.h  includes.h
